--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -7,13 +7,13 @@
 >
   <c-sidebar-brand
     [brandFull]="{
-      src: 'assets/img/brand/logo.png',
+      src: 'assets/img/brand/logo.jpeg',
       width: 200,
-      height: 46,
+      height: 50,
       alt: 'GE Logo'
     }"
     [brandNarrow]="{
-      src: 'assets/img/brand/logo.png',
+      src: 'assets/img/brand/logo.jpeg',
       width: 46,
       height: 46,
       alt: 'GE Logo'
