--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,8 +1,4 @@
-<c-card class="mb-4">
-  <c-card-body>
-
-  </c-card-body>
-  <c-card-footer>
-  </c-card-footer>
-</c-card>
+<div class="text-center mt-6">
+  <img src="assets/img/brand/logo.jpeg">
+</div>
 
