--- a/src/app/views/pages/presence/presence.component.html
+++ b/src/app/views/pages/presence/presence.component.html
@@ -1,6 +1,6 @@
 <c-card class="mb-4">
     <c-card-header>
-      <strong>Listes </strong> <small>Presence</small>
+      <strong>Listes </strong> <small>Plage horaire</small>
       <div class="d-md-flex justify-content-md-end">
         <div [cFormFloating]="false" class="mb-0">
           <label cLabel for="floatingInput">Date du jour</label> 
