--- a/src/app/views/pages/paiement-make/paiement-make.component.html
+++ b/src/app/views/pages/paiement-make/paiement-make.component.html
@@ -1,6 +1,6 @@
 <c-card class="mb-4">
     <c-card-header>
-        Calculer les paiements
+        Calculer les paiements du {{selectmonth}}éme mois
     </c-card-header>
     <c-card-body>
         <div class="row justify-content-md-start">
