--- a/src/app/views/pages/absence/absence.component.html
+++ b/src/app/views/pages/absence/absence.component.html
@@ -12,7 +12,37 @@
   
     </c-card-header>
     <c-card-body>
-      <table cTable>
+      <ngx-datatable #table class="bootstrap" [rows]="rows" [columnMode]="'force'" [scrollbarH]=true [headerHeight]="50"
+      [footerHeight]="50" [rowHeight]="'auto'" [limit]="4" [selected]="selected" [selectAllRowsOnPage]="false"
+     >
+    
+      <ngx-datatable-column name="Nom" prop="user_name">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.user_name}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Date" prop="dateAbsence">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.dateAbsence}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column name="Motif">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          {{row.motif}}
+        </ng-template>
+      </ngx-datatable-column>
+      <ngx-datatable-column [sortable]="false" cellClass="allow-overflow" [width]="40">
+        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+          <div class="btn-group">
+            <button class="btn btn-sm btn-outline-dark"
+                    (click)="openEditLg(contentEdit,row)">Editer</button>
+                    <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row)">Supprimer</button>
+           </div>
+
+        </ng-template>
+      </ngx-datatable-column>
+    </ngx-datatable>
+     <!-- <table cTable>
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -38,7 +68,7 @@
           </tr>
 
         </tbody>
-      </table>
+      </table>-->
     </c-card-body>
   </c-card>
   <ng-template #content let-modal>
@@ -63,7 +93,6 @@
             <input cFormControl id="floatingInput" placeholder="Date" type="date" formControlName="dateAbsence" />
             <label cLabel for="floatingInput">Date</label>
           </div>
-
         </div>
         <div class="row p-2">
           <div [cFormFloating]="true" class="mb-3">
