--- a/src/app/views/pages/planing/planing.component.html
+++ b/src/app/views/pages/planing/planing.component.html
@@ -71,7 +71,7 @@
 
                             </div>
                         </div>
-                       <div [ngClass]="{'disabled': true}" class="text-center" *ngIf="line.planing_id ==0 && checkOldDate(line.date_planing)">
+                       <div class="text-center bg-primary" *ngIf="line.planing_id ==0 && checkOldDate(line.date_planing)">
                             
                         </div>
 
