--- a/src/app/views/pages/my-presence/my-presence.component.html
+++ b/src/app/views/pages/my-presence/my-presence.component.html
@@ -10,7 +10,9 @@
             <th scope="col">#</th>
             <th scope="col">Matricule </th>
             <th scope="col">Nom complet </th>
-            <th scope="col">Date</th>
+            <th scope="col">Date debut</th>
+            <th scope="col">Date de fin</th>
+          
             
             <th scope="col">Motif</th>
           </tr>
@@ -20,7 +22,8 @@
             <th scope="row">{{row.id}}</th>
            <td>{{row.user_name}}</td> 
            <td>{{row.user_name}}</td> 
-           <td>{{row.dateAbsence}}</td>
+           <td>{{row.dateDebut}}</td>
+           <td>{{row.dateFin}}</td>
             
             <td>{{row.motif}}</td>
          
